# escriba

./: LICENSE  README.md  back.bat  pyproject.toml
app/: connect.py
app/hebrew/: hebrew_transliteration.py
app/model/: machine.py  situation.py  state.py  transition.py
app/service/: machine_service.py
tests/service/: test_machine_service.py
