[tool.poetry]
name = "escriba"
version = "0.1.0"
description = ""
authors = ["Scobie Smith <spsmith@finitestate.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
